<resources>
    <string name="app_name">Book Finder</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logo_text">Today a reader, tomorrow a leader</string>
    <string name="name_sign">Name</string>
    <string name="email_sign">Email</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="password_sign">Password</string>
    <string name="signup_btn">signup</string>
    <string name="or">Or</string>
    <string name="remember_me">Remember me</string>
    <string name="create_an_account">Create an account?</string>
    <string name="login_btn">login</string>
    <string name="preview">Preview</string>
    <string name="title">Title:</string>
    <string name="category">Category:</string>
    <string name="not_specified">not specified</string>
    <string name="publish_date">Publish Date:</string>
    <string name="number_of_pages">Number of pages:</string>
    <string name="author">Author:</string>
    <string name="unknown">Unknown</string>
    <string name="dark_mood">Dark mood</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="arabic">العربية</string>
    <string name="your_information">Your Information</string>
    <string name="settings">Settings</string>
    <string name="forget_password">Forget Password?</string>
    <string name="reset">Reset</string>
    <string name="log_in">Log In</string>
    <string name="registration">Registration</string>
    <string name="english" translatable="false">English</string>
    <string name="horisintal_line" translatable="false">|</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="please_enter_your_email">Please Enter your Email</string>
    <string name="arrow_back">arrow back</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="welcome">Welcome</string>
    <string name="try_again">Try again</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="no_description">no description for this book</string>
    <string name="search">Search…</string>
    <string name="signup">SignUp</string>
    <string name="you_didn_t_add_to_favorite">You don\'t have favorite books</string>
    <string name="like_border">like border</string>
</resources>