<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/nameCard"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <TextView
        android:id="@+id/tvEngLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="15dp"
        android:text="English"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" | "
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvEngLang"
        app:layout_constraintTop_toTopOf="@+id/tvEngLang" />

    <TextView
        android:id="@+id/tvArLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arabic"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/tvEngLang" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18dp"
        android:text="@string/your_information"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameCard"
        app:layout_constraintStart_toStartOf="@+id/nameCard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/nameCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline13">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:padding="10dp">


            <EditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="19dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="13dp"
                android:layout_toStartOf="@+id/editIcon"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/name_sign"
                android:textSize="20dp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/editIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_edit"
                android:layout_alignTop="@+id/et_name"
                android:layout_alignBottom="@+id/et_name"/>

            <ImageView
                android:id="@+id/doneIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/et_name"
                android:layout_alignBottom="@+id/et_name"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="1dp"
                android:src="@drawable/ic_baseline_done_24" />


            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_name"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="19dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/email_sign"
                android:textSize="20dp"
                android:textStyle="bold" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/darkMoodCard"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameCard">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:padding="10dp">


            <TextView
                android:id="@+id/darkMood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="19dp"
                android:layout_toStartOf="@+id/switchTheme"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@string/dark_mood"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="0dp"
                android:padding="6dp"
                android:paddingTop="10dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/profile_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/round_bg"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/sign_out"
        android:textColor="@color/darkRed"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>