<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/BottomSheetDialogTheme"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    tools:context=".ui.BookDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="26dp"
        android:background="@drawable/title_layout_bg"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--Image view for displaying our book image-->
                <ImageView
                    android:id="@+id/ivbookD"
                    android:layout_width="130dp"
                    android:layout_height="160dp"
                    android:layout_margin="13dp" />
                <Button
                    android:id="@+id/btnPreviewD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_border"
                    android:text="@string/preview"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline6" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <!--Text view for displaying book publisher-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tvTitle1D"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textColor="@color/bigblue"
                        android:textSize="15sp" />
                </LinearLayout>


                <!--text view for displaying number of pages of book-->
                <!--Text view for displaying book publisher-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/category"
                        android:textColor="@color/bigblue"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCategoriesD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:padding="4dp"
                        android:text="@string/not_specified"
                        android:textColor="@color/bigblue"
                        android:textSize="15sp" />
                </LinearLayout>

                <!--text view for displaying book publish date-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/author"
                        android:textColor="@color/bigblue"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <!--text view for displaying authors book-->
                    <TextView
                        android:id="@+id/tvAuthorsD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:padding="4dp"
                        android:text="@string/unknown"
                        android:textColor="@color/bigblue"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/number_of_pages"
                        android:textColor="@color/bigblue"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvPageCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:padding="4dp"
                        android:textColor="@color/bigblue"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/publish_date"
                        android:textColor="@color/bigblue"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvPublishDateD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:padding="4dp"
                        android:textColor="@color/bigblue"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                </LinearLayout>
                <!--text view for displaying book title-->

                <TextView
                    android:id="@+id/tvTitle2D"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:text="@string/title"
                    android:textColor="@color/bigblue"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <!--text view for displaying book subtitle-->
                <TextView
                    android:id="@+id/tvSubTitleD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:textColor="@color/bigblue"
                    android:textSize="15sp" />

                <!--text view for displaying book description-->
                <TextView
                    android:id="@+id/tvDescriptionD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>
